--- a/respo/config-client-dev.properties
+++ b/respo/config-client-dev.properties
@@ -1,5 +1,5 @@
 
-foo = foo version 21caozhongyingcccc
+foo = foo version 21caozhongyingccccaozhong
 democonfigclient.message=hello spring io
 
 # routes to serviceId
